--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,149 +2,147 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<title>quarkus-servlet - 1.0.0</title>
-<style>
-h1, h2, h3, h4, h5, h6 {
-	margin-bottom: 0.5rem;
-	font-weight: 400;
-	line-height: 1.5;
-}
+    <meta charset="UTF-8">
+    <title>Servlet API with Quarkus</title>
+    <style>
+        h1, h2, h3, h4, h5, h6 {
+            margin-bottom: 0.5rem;
+            font-weight: 400;
+            line-height: 1.5;
+        }
 
-h1 {
-	font-size: 2.5rem;
-}
+        h1 {
+            font-size: 2.5rem;
+        }
 
-h2 {
-	font-size: 2rem
-}
+        h2 {
+            font-size: 2rem
+        }
 
-h3 {
-	font-size: 1.75rem
-}
+        h3 {
+            font-size: 1.75rem
+        }
 
-h4 {
-	font-size: 1.5rem
-}
+        h4 {
+            font-size: 1.5rem
+        }
 
-h5 {
-	font-size: 1.25rem
-}
+        h5 {
+            font-size: 1.25rem
+        }
 
-h6 {
-	font-size: 1rem
-}
+        h6 {
+            font-size: 1rem
+        }
 
-.lead {
-	font-weight: 300;
-	font-size: 2rem;
-}
+        .lead {
+            font-weight: 300;
+            font-size: 2rem;
+        }
 
-.banner {
-	font-size: 2.7rem;
-	margin: 0;
-	padding: 2rem 1rem;
-	background-color: #0d1c2c;
-	color: white;
-}
+        .banner {
+            font-size: 2.7rem;
+            margin: 0;
+            padding: 2rem 1rem;
+            background-color: #0d1c2c;
+            color: white;
+        }
 
-body {
-	margin: 0;
-	font-family: -apple-system, system-ui, "Segoe UI", Roboto,
-		"Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
-		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
+        body {
+            margin: 0;
+            font-family: -apple-system, system-ui, "Segoe UI", Roboto,
+                "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+                "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
 
-code {
-	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-		"Courier New", monospace;
-	font-size: 87.5%;
-	color: #e83e8c;
-	word-break: break-word;
-}
+        code {
+            font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+                "Courier New", monospace;
+            font-size: 87.5%;
+            color: #e83e8c;
+            word-break: break-word;
+        }
 
-.left-column {
-	padding: .75rem;
-	max-width: 75%;
-	min-width: 55%;
-}
+        .left-column {
+            padding: .75rem;
+            max-width: 75%;
+            min-width: 55%;
+        }
 
-.right-column {
-	padding: .75rem;
-	max-width: 25%;
-}
+        .right-column {
+            padding: .75rem;
+            max-width: 25%;
+        }
 
-.container {
-	display: flex;
-	width: 100%;
-}
+        .container {
+            display: flex;
+            width: 100%;
+        }
 
-li {
-	margin: 0.75rem;
-}
+        li {
+            margin: 0.75rem;
+        }
 
-.right-section {
-	margin-left: 1rem;
-	padding-left: 0.5rem;
-}
+        .right-section {
+            margin-left: 1rem;
+            padding-left: 0.5rem;
+        }
 
-.right-section h3 {
-	padding-top: 0;
-	font-weight: 200;
-}
+        .right-section h3 {
+            padding-top: 0;
+            font-weight: 200;
+        }
 
-.right-section ul {
-	border-left: 0.3rem solid #71aeef;
-	list-style-type: none;
-	padding-left: 0;
-}
+        .right-section ul {
+            border-left: 0.3rem solid #71aeef;
+            list-style-type: none;
+            padding-left: 0;
+        }
 
-.provided-code {
-	border-left: 0.3rem solid #71aeef;
-	padding-left: 10px;
-}
+        .provided-code {
+            border-left: 0.3rem solid #71aeef;
+            padding-left: 10px;
+        }
 
-.provided-code h3 {
-	font-weight: 200;
-}
-</style>
+        .provided-code h3 {
+            font-weight: 200;
+        }
+    </style>
 </head>
 
 <body>
 
-	<div class="banner lead">REST endpoint, and a Form with a Filter and a Serlvet</div>
+<div class="banner lead">REST endpoint, and a Form with a Filter and a Serlvet</div>
 
-	<div class="container">
-		<div class="left-column">
-			<div class="provided-code">
-				<h5>JAX-RS Endpoint: <a href="/saludo" class="path-link" target="_blank">/saludo</a></h5>
-				<h5>Formulario:</h5>
-				<p>				
-				<form action="procesar-nombre" method="get">
-					Introduce tu nombre: <input type="text" name="nombre">
-					<input type="submit" value="Enviar">
-				</form>	
-				</p>
-			</div>
-			<br><br>
-				<div class="provided-code">
-				<ul>
-					<li>This static page is served by Quarkus. The source is in <code>src/main/resources/META-INF/resources/index.html</code>.</li>
-					<li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
-					<li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
-				</ul>
-		</div>				
-		</div>
-		<div class="right-column">
-			<div class="right-section">
-				<h5>Application</h5>
-				<ul>
-					<li>GroupId: <code>com.arcticsoft</code></li>
-					<li>Quarkus Version: <code>2.2.3.Final</code></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<div class="container">
+    <div class="left-column">
+        <div class="provided-code">
+            <h5>JAX-RS Endpoint: <a href="/saludo" class="path-link" target="_blank">/saludo</a></h5>
+            <h5>Formulario:</h5>
+            <form action="procesar-nombre" method="get">
+                Introduce tu nombre: <input type="text" name="nombre">
+                <input type="submit" value="Enviar">
+            </form>
+        </div>
+        <br><br>
+        <div class="provided-code">
+            <ul>
+                <li>This static page is served by Quarkus. The source is in <code>src/main/resources/META-INF/resources/index.html</code>.
+                </li>
+                <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
+                <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
+            </ul>
+        </div>
+    </div>
+    <div class="right-column">
+        <div class="right-section">
+            <h5>Application</h5>
+            <ul>
+                <li>GroupId: <code>com.arcticsoft</code></li>
+                <li>Quarkus Version: <code>2.11.3.Final</code></li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
-
 </html>
