--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <title>Servlet API with Quarkus</title>
     <style>
-        h1, h2, h3, h4, h5, h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             margin-bottom: 0.5rem;
             font-weight: 400;
             line-height: 1.5;
@@ -112,37 +117,39 @@
 
 <body>
 
-<div class="banner lead">REST endpoint, and a Form with a Filter and a Serlvet</div>
+    <div class="banner lead">REST endpoint, and a Form with a Filter and a Serlvet</div>
 
-<div class="container">
-    <div class="left-column">
-        <div class="provided-code">
-            <h5>JAX-RS Endpoint: <a href="/saludo" class="path-link" target="_blank">/saludo</a></h5>
-            <h5>Formulario:</h5>
-            <form action="procesar-nombre" method="get">
-                Introduce tu nombre: <input type="text" name="nombre">
-                <input type="submit" value="Enviar">
-            </form>
+    <div class="container">
+        <div class="left-column">
+            <div class="provided-code">
+                <h5>JAX-RS Endpoint: <a href="/saludo" class="path-link" target="_blank">/saludo</a></h5>
+                <h5>Formulario:</h5>
+                <form action="procesar-nombre" method="get">
+                    Introduce tu nombre: <input type="text" name="nombre">
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+            <br><br>
+            <div class="provided-code">
+                <ul>
+                    <li>This static page is served by Quarkus. The source is in
+                        <code>src/main/resources/META-INF/resources/index.html</code>.
+                    </li>
+                    <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
+                    <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
+                </ul>
+            </div>
         </div>
-        <br><br>
-        <div class="provided-code">
-            <ul>
-                <li>This static page is served by Quarkus. The source is in <code>src/main/resources/META-INF/resources/index.html</code>.
-                </li>
-                <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
-                <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
-            </ul>
+        <div class="right-column">
+            <div class="right-section">
+                <h5>Application</h5>
+                <ul>
+                    <li>GroupId: <code>com.arcticsoft</code></li>
+                    <li>Quarkus Version: <code>2.16.5.Final</code></li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="right-column">
-        <div class="right-section">
-            <h5>Application</h5>
-            <ul>
-                <li>GroupId: <code>com.arcticsoft</code></li>
-                <li>Quarkus Version: <code>2.11.3.Final</code></li>
-            </ul>
-        </div>
-    </div>
-</div>
 </body>
+
 </html>
